syntax = "proto3";

package identity;
option go_package = "github.com/kahunacohen/proto-gen/identity;identitypb";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

message Identity {
  string id = 1;
  string name = 2;
  string email = 3;
  string national_id = 4;
}

message GetIdentityRequest {
  string id = 1;
}

message GetIdentityResponse {
  Identity identity = 1;
}

message DeleteIdentityRequest {
  string id = 1;
}

message GetPatientRequest {
  string id = 1;
}

message GetPatientResponse {
  Identity identity = 1;
}

service IdentityService {
  rpc GetIdentity(GetIdentityRequest) returns (GetIdentityResponse);

  rpc DeleteIdentity(DeleteIdentityRequest)
      returns (google.protobuf.Empty);

  rpc GetPatient(GetPatientRequest) returns (GetPatientResponse) {
    option (google.api.http) = {
      get: "/v1/patients/{id}"
    };
  }
}

